# FilePicker

./: README.md  pyproject.toml
FilePicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
filepicker/: __init__.py  file_list_widget.py  main.py
